# ai-agent-v2

./: .gitignore  Makefile  README.md  demo.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  structure.md  test_real_docs.py
.github/workflows/: ci.yml
agents/: __init__.py  anomaly_correction_agent.py  feedback_loop.py  simple_anomaly_agent.py
docker/: Dockerfile
k8s/: deployment.yaml
models/: __init__.py  field_patterns.json
scripts/: __init__.py  generate_test_data.py
test_doc/: 013a94a5-cb70-4b50-98a5-e40dc3ccf60f-KKR 7.10.json  02.22.18. SAC III_Solamere Capital Fund II LP12858.json  029f1d67-2e9f-4181-bd32-a478f23b4298-10.4.2023 SEP Fund I Net Capital Call Notices 10.04.23 AF III.json  test_real_doc1.json  test_real_doc2.json  test_real_doc3.json
tests/: test_feedback_loop.py
